--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
 h1{
   color: white;
   justify-content: center;
+  font-size: 40px;
 }
 
 h2{
@@ -20,6 +21,10 @@ h2{
 ul{
   color: white;
   justify-content: center;
+  list-style: none;
+  padding: 0;
+  font-size: 30px;
+  padding-top: 30px;  
 }
 
 p{
@@ -28,6 +33,10 @@ p{
 }
 
 li{
-  color: white;
+  color: white ;
   justify-content: center;
+  padding-bottom: 30px;
+  display: grid;
+  padding: 8px 0;
+  border-bottom: 1px solid #333;
 }
